chapter_02/ToDo_app/auth-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    app: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
      annotations:
        admission.kubernetes.io/webhook: "validation.example.com/my-validating-webhook-config"
    spec:
      containers:
      - name: auth-api
        image: mihirshah99/auth:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 8081
