chapter_02/ToDo_app/auth-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 8081
