chapter_02/ToDo_app/auth-api/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-api
spec:
  podSelector:
    matchLabels:
      app: auth-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 8081
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: users-api
    ports:
    - protocol: TCP
      port: 8083
